JavaFx gradle configuration